--- a/src/main/resources/application.h2.properties
+++ b/src/main/resources/application.h2.properties
@@ -1,1 +1,9 @@
 spring.h2.console.enabled=true
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/student
+spring.datasource.username=Kurt
+spring.datasource.password=Password123
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
