--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,1 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/student
-spring.datasource.username=Kurt
-spring.datasource.password=Password123
-
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.show-sql=true
+spring.h2.console.enabled=true
